@@ -1,14 +1,10 @@
-syntax: reset <mapname>
-notes:
-all other characters must be
-off of the map at the time of
-reset. This will NOT reset any
-unique items, such as players
-apartments, in the case of unique
-items being on a map, it will
-cause them to be saved before
-the map is reset.
+Syntax: reset <mapname>
+     or reset full-reset <mapname>
 
-Using 'reset .' will reset the
-map that the player is currently
-on.
+All other characters must be off of the map at the time of reset. This will NOT reset any unique items, such as players apartments, in the case of unique items being on a map, it will cause them to be saved before the map is reset.
+
+Using 'reset .' will reset the map that the player is currently on.
+
+'full-reset' enables to totally reset a map with unique squares.
+
+To totally reset a player's unique map, you must not be in it and use the full path. Trying to use 'reset full-reset .' on such a unique map will give you the full path required to totally reset the map.
